--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,1 +1,19 @@
-setw -g mouse on
+#enable mouse support
+set -g mouse on
+
+# remap prefix from 'C-b' to 'C-s'
+unbind C-b
+set-option -g prefix C-s
+bind-key C-s send-prefix
+
+# reload config
+bind r source-file ~/.tmux.conf
+
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# supports focus events for vim or nvim
+set-option -g focus-events on
