--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -17,3 +17,19 @@ bind -n M-Down select-pane -D
 
 # supports focus events for vim or nvim
 set-option -g focus-events on
+
+# Unbind the default copy-mode key (prefix + [)
+unbind [
+# Bind copy-mode to prefix + Return
+bind-key Enter copy-mode
+
+# Use vi-style keybindings in copy-mode
+set-window-option -g mode-keys vi
+# Start selection with 'v' in copy mode
+bind-key -T copy-mode-vi v send -X begin-selection
+# Yank (copy) selection with 'y' in copy mode
+bind-key -T copy-mode-vi y send -X copy-selection
+# Paste with 'p' (or 'P') in normal mode
+bind p paste-buffer
+bind P paste-buffer
+
