--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -33,3 +33,8 @@ bind-key -T copy-mode-vi y send -X copy-selection
 bind p paste-buffer
 bind P paste-buffer
 
+# rebind C-s + Left to re-size panes
+bind-key Left resize-pane -L 5
+bind-key Right resize-pane -R 5
+bind-key Up resize-pane -U 5
+bind-key Down resize-pane -D 5
