--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -38,3 +38,6 @@ bind-key Left resize-pane -L 5
 bind-key Right resize-pane -R 5
 bind-key Up resize-pane -U 5
 bind-key Down resize-pane -D 5
+
+# new window in current path
+bind c new-window -c "#{pane_current_path}"
