last session and last window

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -41,3 +41,8 @@ bind-key Down resize-pane -D 5
 
 # new window in current path
 bind c new-window -c "#{pane_current_path}"
+
+# toggle last window
+bind Space last-window
+# switch to last session
+bind-key C-Space switch-client -l
