split opens in the same path as the previous pane

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -41,6 +41,9 @@ bind-key Down resize-pane -D 5
 
 # new window in current path
 bind c new-window -c "#{pane_current_path}"
+# Pane splits should open to the same path as the current pane
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 
 # toggle last window
 bind Space last-window
