add vi style binding

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -14,6 +14,12 @@ bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+# and vi style keys
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
+
 
 # supports focus events for vim or nvim
 set-option -g focus-events on
